--- a/Serendipity/.settings/org.eclipse.wst.common.component
+++ b/Serendipity/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="Serendipity">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/libs"/>
         <property name="context-root" value="Serendipity"/>
         <property name="java-output-path" value="/Serendipity/build/classes"/>
     </wb-module>
